[gd_scene load_steps=10 format=2]

[ext_resource path="res://Games/TheFallen/roles/guardian.gd" type="Script" id=1]
[ext_resource path="res://Fonts/yellowfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/OkButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/buttonContainer.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "chose"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("buttonContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("instructions:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("instructions:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("instructions:text")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("okconfirm:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "done"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("instructions:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "- go back to sleep -" ]
}

[sub_resource type="Animation" id=3]
resource_name = "fini"
tracks/0/type = "value"
tracks/0/path = NodePath("instructions:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4.84937, 405.009 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("buttonContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("instructions:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("instructions:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4.84937, 405.009 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("buttonContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("instructions:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("instructions:text")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "- choose a player -
to protect" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("okconfirm:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 270, 480 )

[node name="GuardianScene" type="Node"]
script = ExtResource( 1 )

[node name="buttonContainer" parent="." instance=ExtResource( 4 )]
margin_left = -7.58374
margin_right = 530.416

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start"
anims/chose = SubResource( 1 )
anims/done = SubResource( 2 )
anims/fini = SubResource( 3 )
anims/start = SubResource( 4 )

[node name="instructions" type="Label" parent="."]
visible = false
anchor_left = 0.00349573
anchor_right = 0.00349573
margin_left = 2.96168
margin_top = 405.009
margin_right = 538.961
margin_bottom = 514.009
rect_pivot_offset = Vector2( 438.421, 243.716 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.356863, 0.556863, 0.988235, 1 )
text = "- choose a player -
to protect"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="screenpressed" type="TouchScreenButton" parent="."]
shape = SubResource( 5 )
shape_visible = false

[node name="okconfirm" parent="." instance=ExtResource( 3 )]
position = Vector2( 66.9188, 845.711 )
[connection signal="pressed" from="screenpressed" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="okconfirm" to="." method="_on_okconfirm_pressed"]
